--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-size: 40px;
     text-align: center;
     color: rgb(109, 209, 226);
-    height: 100px;
+    height: 30px;
     
 }
 .cloudRight {
@@ -16,14 +16,54 @@
    padding-top: 2%;  
 }
 .cloudLeft{
-    margin-left: 30%;
+    margin-bottom: 20%;
+    margin-left: 10%;
 
 }
 .Mountain{
     text-align: center;
+    margin-left: 8%;
 }
 .heading p{
     text-align: center;
     font-size: 20px;
     color: rgb(109, 209, 226);
+}
+@media (min-width: 320px) and (max-width: 768px) {
+    /* section one */
+    .heading{
+        background-color: rgb(192, 231, 245);  
+       height: fit-content;
+       width: 100%;
+    }
+    .heading h1{
+        font-size: 20px;
+        text-align: center;
+        color: rgb(109, 209, 226);
+        height: 30px;
+        
+    }
+    .cloudRight {
+       margin-left: 70%; 
+       padding-top: 2%;
+       width: 100px;  
+    }
+    .cloudLeft{
+        margin-bottom: 20%;
+        margin-left: 2%;
+        width: 100px;
+    
+    }
+    .Mountain{
+        text-align: center;
+        margin-left: 30%;
+        height: 100px;
+    }
+    .heading p{
+        text-align: center;
+        font-size: 13px;
+        color: rgb(109, 209, 226);
+    }  
+
+    /* section 2 */
 }
