--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 .heading{
     background-color: rgb(236, 250, 255);  
-    height: ;
+    height:550px ;
 }
 .heading h1{
-    font-size: 40px;
+    font-size: 60px;
     text-align: center;
     color: rgb(109, 209, 226);
-    height: 30px;
+    height: 40px;
     
 }
 .cloudRight {
@@ -16,17 +16,21 @@
    padding-top: 2%;  
 }
 .cloudLeft{
-    margin-bottom: 20%;
+    margin-bottom: 68%;
     margin-left: 10%;
+    margin-top: -30%;
 
 }
 .Mountain{
     text-align: center;
-    margin-left: 8%;
+    margin-left: 13%;
+    height:250px;
+    width: 400px;
+    margin-bottom: 50%;
 }
 .heading p{
     text-align: center;
-    font-size: 20px;
+    font-size: 35px;
     color: rgb(109, 209, 226);
 }
 @media (min-width: 320px) and (max-width: 768px) {
@@ -35,29 +39,33 @@
         background-color: rgb(192, 231, 245);  
        height: fit-content;
        width: 100%;
+       height: 200px;
     }
     .heading h1{
         font-size: 20px;
         text-align: center;
         color: rgb(109, 209, 226);
-        height: 30px;
+        height: 10px;
         
     }
     .cloudRight {
        margin-left: 70%; 
        padding-top: 2%;
-       width: 100px;  
+       width: 60px;  
     }
     .cloudLeft{
-        margin-bottom: 20%;
-        margin-left: 2%;
-        width: 100px;
+        margin-bottom: 0%;
+        margin-left: 21%;
+        width: 60px;
+
     
     }
     .Mountain{
         text-align: center;
-        margin-left: 30%;
-        height: 100px;
+        margin-left:31%;
+        height: 70px;
+        width: 150px;
+        margin-bottom: ;
     }
     .heading p{
         text-align: center;
