--- a/style.css
+++ b/style.css
@@ -1,38 +1,177 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap'); */
-
-.heading{
-    background-color: rgb(236, 250, 255);  
-    height:550px ;
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&family=Roboto:wght@100;400&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    font-family:  'Maven Pro', sans-serif;
+    box-sizing: border-box;
 }
-.heading h1{
-    font-size: 60px;
+body{
+    overflow-x: hidden;
+}
+main{
+    height: 100vh;
+    position: relative;
+    background-color: aliceblue;
+}
+.heading{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.cloud1{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+}
+.cloud2{
+    position: absolute;
+    right: 10%;
+    top: 20%;
+}
+.em{
+    font-family:  'Maven Pro', sans-serif;
+    color:aqua ;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    color: rgb(109, 209, 226);
-    height: 40px;
+}
+.ma{
+    width: 300px;
+}
+.pre h1{
+  color: aqua;
+}
+.nu{
+    color: aqua;
+    margin-bottom: 50px;
+}
+.per{
+    border-top: 4px solid black;
+    padding: 10px;
+    display: flex;
+}
+.el{
+    width: 70%;
+    margin: 0 auto;
+}
+.per img{
+    flex-basis: 20%;
+    width: 100%;
+}
+.ot{
+    flex-basis: 70%;
     
 }
-.cloudRight {
-   margin-left: 70%; 
-   padding-top: 2%;  
+.ot h4{
+    color: rgb(70, 189, 189);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
-.cloudLeft{
-    margin-bottom: 68%;
-    margin-left: 10%;
-    margin-top: -30%;
+.ot .left{
+text-align: left;
+}
+.skillset1{
+    flex-basis: 20%;
+}
+.skillset{
+    width: 20%;
+}
+section{
+    background-color: white;
+    text-align: center;
+    padding-top: 70px;
+}
+.wind{
+    background-color:aliceblue;
+    margin-top: 50px;
+}
+.wind h1{
+    color: aquamarine;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    padding: 10px;
+}
+.evolve{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 15px;
+    justify-content: center;
+    width: 600px;
+    margin:0 auto;
+}
+.evolve img{
+    width: 300px;
+    border: 1px solid green;
+    border-radius: 2px;
+    height: 100%;
+}
+.evolve img:hover{
+    transform: scale(1.1);
+}
+.wait .ill{
+    color: aqua;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+.wait h2{
+    color: aqua;
+    margin-top: 30px;
+    padding-bottom: 20px;
+}
+.wait h4{
+    color: rgb(13, 110, 110);
+    font-size: 14px;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+.wait p{
+    font-size: 14px;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+.want{
+    margin-left: 33%;
+    margin-bottom: 50px;
+}
+button {
+    background-color: rgb(35, 131, 187);
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    font-size: 10px;
+    margin: 4px 2px;
+  }
+  button:hover {
+    background-color: #d6e293;
+  }
+footer p{
+    padding: 50px 200px;
+    border-top: 2px solid rgb(34, 165, 197);
+    background-color:rgb(34, 165, 197) ;
+    color: white;
+    font-size: 10px;
+    
+}
+.will{
+    background-color: rgb(34, 165, 197);
+    font-size: 12px;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    padding: 50px;
+}
+.fish{
+    width: 5px;
+}
 
-}
-.Mountain{
-    text-align: center;
-    margin-left: 13%;
-    height:250px;
-    width: 400px;
-    margin-bottom: 50%;
-}
-.heading p{
-    text-align: center;
-    font-size: 35px;
-    color: rgb(109, 209, 226);
-}
+
 @media (min-width: 320px) and (max-width: 768px) {
     /* section one */
     .heading{
@@ -74,4 +213,41 @@
     }  
 
     /* section 2 */
+    .second{
+        /* text-align: center;  */
+        padding-top: 5%;
+        padding-left: 15%;
+        padding-right: 15%;
+     }
+     #girlpic{
+         width: 70px;
+         text-align: center;
+         margin-top: 1%; 
+         margin-left: 37%; 
+     }
+     .second h1{
+         color: rgb(9, 211, 247);
+         font-size: 15px;
+         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+         margin-top: 0%;
+     text-align: center;
+     }
+     .iAM{ 
+     font-size: 8px;      /* I am a web developer*/
+     margin-left: 20px ;
+     margin-right:20px; 
+     text-align: center;
+     }
+     
+     .img1{
+         width: 80px;
+         float: left;
+     }
+     .web{
+        font-size: 12px;
+        color: rgb(0, 183, 255);
+     }
+     .love{
+        font-size: 8px;
+     }
 }
